--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ socket.on('queryFor' + user, function(data){
     .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 	svg.call(tip);
 	var count = 0;
-	var colors = ['#AA0078', '#FFCC00', '#666666', '#FF0000', '#003366', '#C0C0C0', '#00611C', '#FF9900', '#336699', '#FF6600'];
+	var colors = ['#BF3EFF', '#FFCC00', '#8968CD', '#FF0000', '#008B8B', '#C0C0C0', '#66CD00', '#FF9900', '#336699', '#FF6600'];
 	data.forEach(function(d) {
 		d.id     =  d.subject;
 		d.color  =  colors[count];
