--- a/index.html
+++ b/index.html
@@ -3,131 +3,103 @@
 
 <html>
 <head>
-<style>
-body {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.bar {
-  fill: orange;
-}
-
-/*.solidArc:hover {
-  fill: #00FF00 ;
-}*/
-
-.solidArc {
-    -moz-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-}
-
-.x.axis path {
-  display: none;
-}
-
-.aster-score { 
-  line-height: 1;
-  font-weight: bold;
-  font-size: 500%;
-}
-
-.d3-tip {
-  line-height: 1;
-  font-weight: bold;
-  padding: 12px;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  border-radius: 2px;
-}
-
-/* Creates a small triangle extender for the tooltip */
-.d3-tip:after {
-  box-sizing: border-box;
-  display: inline;
-  font-size: 10px;
-  width: 100%;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
-  content: "\25BC";
-  position: absolute;
-  text-align: center;
-}
-
-/* Style northward tooltips differently */
-.d3-tip.n:after {
-  margin: -1px 0 0 0;
-  top: 100%;
-  left: 0;
-}
-
-</style>
+<title> Protocharts </title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="./public/style.css">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Protocharts</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+		  <button type="button" class="btn btn-default" id="login">Login</button>
+		  <button type="button" class="btn btn-default" id="logout">Logout</button>
+          </form>
+        </div>
+      </div>
+    </nav>
 </head>
 <body>
-hello, world!
-<br>
+<script>
+	document.getElementById("logout").style.display="none";
+	document.getElementById("login").style.display="initial";
+</script>
+<h1>
+	<div id="welcome">
+		Welcome to Protocharts!
+	</div>
+	<div id="playername">
+	</div>
+</h1>
+<h6>
+	<div id="content">
+
+	</div>
+</h6>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<!--<script src="./draw.js" ></script>-->
+<script src="./public/draw.js" ></script>
+<script src="https://login.persona.org/include.js"></script>
 <script>
-var socket = io();
-var user = "Niels";
-socket.emit('getData', user);
-socket.on('queryFor' + user, function(data){
-	var width = 500,
-	height = 500,
-	radius = Math.min(width, height) / 2,
-	innerRadius = 0.3 * radius;
+getChart("Niels");
+navigator.id.watch({
+  onlogin: function(assertion) {
+    var xhr = new XMLHttpRequest();
+    xhr.open("POST", "/persona/verify", true);
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.addEventListener("loadend", function(e) {
+      var data = JSON.parse(this.responseText);
+      if (data && data.status === "okay") {
+        console.log("You have been logged in as: " + data.email);
+	  getChart(data.email);
+	  document.getElementById("logout").style.display="initial";
+          document.getElementById("login").style.display="none";
+	  document.getElementById("welcome").style.display="none";
+	  document.getElementById("playername").style.display="initial";
+	  document.getElementById('playername').innerHTML=data.email;
+      }
+    }, false);
 
-	var pie = d3.layout.pie().sort(null).value(function(d) { return d.width; });
-	var tip = d3.tip().attr('class', 'd3-tip').offset([0, 0]).html(function(d) {
-		return d.data.id + ": <span style='color:"+d.data.color+"'>" + d.data.points + "</span> points";
-	});
-	var arc = d3.svg.arc().innerRadius(innerRadius).outerRadius(function (d) { 
-		return (radius - innerRadius) * (d.data.accuracy / 100.0) + innerRadius; 
-	});
-
-	var outlineArc = d3.svg.arc().innerRadius(innerRadius).outerRadius(radius);
-
-	var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height)
-    .append("g")
-    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
-	svg.call(tip);
-	var count = 0;
-	var colors = ['#BF3EFF', '#FFCC00', '#49E20E', '#FF3030', '#00CDCD', '#8968CD', '#66CD00', '#FF9900', '#009ACD', '#FF6600'];
-	data.forEach(function(d) {
-		d.id     =  d.subject;
-		d.color  =  colors[count];
-		count++;
-		d.points = Math.max(15*+d.powers + 10*+d.gets - 5*+d.negs,0);
-		d.accuracy  = (+d.powers + +d.gets)/(+d.powers + +d.gets + +d.negs) * 100;
-		d.width  = +d.points;
-	});
-
-	var path = svg.selectAll(".solidArc").data(pie(data)).enter().append("path").attr("fill", function(d) { return d.data.color; }).attr("class", "solidArc").attr("d", arc).on('mouseover', tip.show)
-      .on('mouseout', tip.hide);
-
-	var outerPath = svg.selectAll(".outlineArc").data(pie(data)).enter().append("path").attr("fill", "none").attr("class", "outlineArc").attr("d", outlineArc);
-	var accuracy = data.reduce(function(a, b) { return a + (b.accuracy * b.points); }, 0) / 
-	data.reduce(function(a, b) {return a + b.points; }, 0);
-	return svg;
+    xhr.send(JSON.stringify({
+      assertion: assertion
+    }));
+  },
+  onlogout: function() {
+    var xhr = new XMLHttpRequest();
+    xhr.open("POST", "/persona/logout", true);
+    xhr.addEventListener("loadend", function(e) {
+      console.log("You have been logged out");
+      document.getElementById("logout").style.display="none";
+      document.getElementById("login").style.display="initial";
+      document.getElementById("welcome").style.display="initial";
+      document.getElementById("playername").style.display="none";
+      document.getElementById('content').innerHTML="Protocharts collects information about user buzzes from protobowl, and allows you to view your performance by subject. This website is still under development, and more features will be added soon!";
+    });
+    xhr.send();
+  }
 });
 
-$(window).on('beforeunload', function(){
-    socket.close();
-});
+
+document.querySelector("#login").addEventListener("click", function() {
+  navigator.id.request();
+}, false);
+
+document.querySelector("#logout").addEventListener("click", function() {
+  navigator.id.logout();
+  getChart("Niels");
+}, false);
 </script>
 </body>
 </html>
