--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
 <link rel="stylesheet" type="text/css" href="./public/style.css">
    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -53,7 +54,7 @@
 <script src="./public/draw.js" ></script>
 <script src="https://login.persona.org/include.js"></script>
 <script>
-getChart("Niels");
+getChart("sample");
 navigator.id.watch({
   onlogin: function(assertion) {
     var xhr = new XMLHttpRequest();
@@ -63,7 +64,7 @@ navigator.id.watch({
       var data = JSON.parse(this.responseText);
       if (data && data.status === "okay") {
         console.log("You have been logged in as: " + data.email);
-	  getChart(data.email);
+	  getChart((data.email));
 	  document.getElementById("logout").style.display="initial";
           document.getElementById("login").style.display="none";
 	  document.getElementById("welcome").style.display="none";
